[gd_scene load_steps=16 format=2]

[ext_resource path="res://combat/all_characters.gd" type="Script" id=1]
[ext_resource path="res://combat/start_turn.gd" type="Script" id=2]
[ext_resource path="res://combat/end game menu.gd" type="Script" id=3]
[ext_resource path="res://combat/select_encounter_button.gd" type="Script" id=4]
[ext_resource path="res://combat/action_matrix/action_matrix.gd" type="Script" id=5]
[ext_resource path="res://combat/combat.gd" type="Script" id=6]
[ext_resource path="res://combat/action_matrix/combat_action_button.tscn" type="PackedScene" id=7]
[ext_resource path="res://combat/assets/forest, night, abstract, black and white, high contrast, Linotype print 2.jpg" type="Texture" id=8]
[ext_resource path="res://assets/menus/go back button on hover.png" type="Texture" id=9]
[ext_resource path="res://assets/menus/fast forward button on hover.png" type="Texture" id=10]
[ext_resource path="res://assets/menus/do turn button.png" type="Texture" id=11]
[ext_resource path="res://assets/menus/do turn button start combat.png" type="Texture" id=12]
[ext_resource path="res://assets/menus/fast forward button.png" type="Texture" id=13]
[ext_resource path="res://assets/menus/go back button.png" type="Texture" id=14]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="combat_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.141176, 0.141176, 0.141176, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.490179
anchor_top = 0.0144444
anchor_right = 0.508631
anchor_bottom = 0.0144444
margin_left = -806.5
margin_right = 806.5
margin_bottom = 748.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="action_matrix" type="GridContainer" parent="ScrollContainer"]
margin_right = 1644.0
margin_bottom = 748.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 45
custom_constants/hseparation = 30
columns = 5
script = ExtResource( 5 )

[node name="combat_action_button" parent="ScrollContainer/action_matrix" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 170.0
margin_bottom = 200.0

[node name="combat_action_button2" parent="ScrollContainer/action_matrix" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_right = 370.0
margin_bottom = 200.0

[node name="combat_action_button3" parent="ScrollContainer/action_matrix" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_right = 570.0
margin_bottom = 200.0

[node name="combat_action_button4" parent="ScrollContainer/action_matrix" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 600.0
margin_right = 770.0
margin_bottom = 200.0

[node name="combat_action_button5" parent="ScrollContainer/action_matrix" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 800.0
margin_right = 970.0
margin_bottom = 200.0

[node name="combat_action_button6" parent="ScrollContainer/action_matrix" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 245.0
margin_right = 170.0
margin_bottom = 445.0

[node name="combat_action_button7" parent="ScrollContainer/action_matrix" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 245.0
margin_right = 370.0
margin_bottom = 445.0

[node name="combat_action_button8" parent="ScrollContainer/action_matrix" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_top = 245.0
margin_right = 570.0
margin_bottom = 445.0

[node name="combat_action_button9" parent="ScrollContainer/action_matrix" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 600.0
margin_top = 245.0
margin_right = 770.0
margin_bottom = 445.0

[node name="combat_action_button10" parent="ScrollContainer/action_matrix" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 800.0
margin_top = 245.0
margin_right = 970.0
margin_bottom = 445.0

[node name="combat_action_button11" parent="ScrollContainer/action_matrix" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 490.0
margin_right = 170.0
margin_bottom = 690.0

[node name="combat_action_button12" parent="ScrollContainer/action_matrix" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 200.0
margin_top = 490.0
margin_right = 370.0
margin_bottom = 690.0

[node name="combat_action_button13" parent="ScrollContainer/action_matrix" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_top = 490.0
margin_right = 570.0
margin_bottom = 690.0

[node name="combat_action_button14" parent="ScrollContainer/action_matrix" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 600.0
margin_top = 490.0
margin_right = 770.0
margin_bottom = 690.0

[node name="all_characters" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="allies" type="HBoxContainer" parent="all_characters"]
anchor_left = 0.010119
anchor_top = 1.0
anchor_right = 0.0613095
anchor_bottom = 1.0
margin_top = -600.0
margin_right = 398.0
mouse_filter = 2
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VSeparator" type="VSeparator" parent="all_characters"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -130.0
margin_top = -600.0
margin_right = 130.0
rect_min_size = Vector2( 260, 0 )
mouse_filter = 2
custom_styles/separator = SubResource( 1 )

[node name="enemies" type="HBoxContainer" parent="all_characters"]
anchor_left = 0.841667
anchor_top = 1.0
anchor_right = 0.989881
anchor_bottom = 1.0
margin_left = -407.0
margin_top = -600.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": true
}

[node name="middle_container" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.7
anchor_bottom = 1.0
margin_left = -109.0
margin_top = -240.0
margin_right = -47.0
margin_bottom = 48.0
mouse_filter = 2

[node name="start_turn" type="TextureButton" parent="middle_container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.5
margin_top = -37.0
margin_right = 95.5
margin_bottom = 37.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
expand = true
script = ExtResource( 2 )

[node name="current_round" type="RichTextLabel" parent="middle_container"]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -34.0
margin_top = 199.0
margin_right = 68.0
margin_bottom = -48.0
text = "Round: 1"

[node name="current_phase" type="RichTextLabel" parent="middle_container"]
margin_left = 165.0
margin_top = 213.0
margin_right = 292.0
margin_bottom = 253.0
text = "Phase: 1"

[node name="current_act" type="RichTextLabel" parent="middle_container"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = 376.0
margin_right = 72.0
margin_bottom = 129.0
text = "Act: 1"

[node name="winner" type="RichTextLabel" parent="middle_container"]
margin_left = 280.0
margin_top = 378.0
margin_right = 381.0
margin_bottom = 413.0

[node name="select_encounter" type="OptionButton" parent="middle_container"]
visible = false
margin_left = 318.0
margin_top = 194.0
margin_right = 455.0
margin_bottom = 219.0
text = "select encounter"
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="fast_forward_button" type="TextureButton" parent="middle_container"]
visible = false
anchor_left = 1.03518
anchor_top = 0.9
anchor_right = 1.03518
anchor_bottom = 0.9
margin_left = -94.0
margin_top = -152.2
margin_right = 99.0
margin_bottom = -79.2
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="go_back_button" type="TextureButton" parent="middle_container"]
anchor_left = -0.289
anchor_top = 0.368
anchor_right = 0.196
anchor_bottom = 0.622
margin_left = 0.0220032
margin_top = 0.0159912
margin_right = -0.00804901
margin_bottom = -0.136017
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="player_character_limit" type="Label" parent="middle_container"]
anchor_left = 0.329146
anchor_top = 0.28125
anchor_right = 0.580402
anchor_bottom = 0.28125
margin_right = 40.0
margin_bottom = 14.0
text = "player_character_limit"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="end game menu" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.5
margin_top = -86.5
margin_right = 231.5
margin_bottom = 86.5
color = Color( 0.568627, 0.568627, 0.568627, 1 )
script = ExtResource( 3 )

[node name="end fight button" type="Button" parent="end game menu"]
margin_left = 152.0
margin_top = 110.0
margin_right = 297.0
margin_bottom = 159.0
text = "end fight"

[node name="end game info" type="RichTextLabel" parent="end game menu"]
margin_left = 185.0
margin_top = 13.0
margin_right = 426.0
margin_bottom = 102.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Who won?"

[connection signal="item_selected" from="middle_container/select_encounter" to="middle_container/select_encounter" method="_on_select_encounter_item_selected"]
[connection signal="pressed" from="middle_container/fast_forward_button" to="middle_container/start_turn" method="_on_fast_forward_button_pressed"]
[connection signal="pressed" from="middle_container/go_back_button" to="." method="end_fight_and_go_back_to_over_world"]
[connection signal="pressed" from="end game menu/end fight button" to="." method="end_fight_and_go_back_to_over_world"]
